# codeforses

./: 1512C.cpp  1670B.cpp
kozin_v_v/: 0136a.cpp  0915a.cpp  0935b.cpp  1100С.cpp  1165B.cpp  1330a.cpp  1352a.cpp  136b.cpp  1404A.cpp  1501a.cpp  1559a.cpp  1585a.cpp  1649a.cpp  1669d.cpp  1671a.cpp  1675c.cpp  1690d.cpp  1701a.cpp  1703c.cpp  1734b.cpp  1744D.cpp  263a.cpp  271a.cpp  4a.cpp  579a.cpp  617a.cpp  879B.cpp  978a.cpp  CMakeLists.txt  README.md  bpm_22_1_1.cpp  bpm_22_1_2.cpp  bpm_22_1_3.cpp  hw-05-01.cpp  hw-05-02.cpp  hw-05-03.cpp  main.cpp  rational.cpp  test.cpp
