cmake_minimum_required(VERSION 3.23)
project(C___codeforses)

set(CMAKE_CXX_STANDARD 17)

add_executable(C___codeforses main.cpp)

add_executable(1235 1721B.cpp)
add_executable(1703c 1703c.cpp)
add_executable(1670B 1670B.cpp)
add_executable(main main.cpp)
add_executable(1512C 1512C.cpp)
#add_executable(1100ะก 1100ะก.cpp)
add_executable(1721B 1721B.cpp)
add_executable(1404A 1404A.cpp)
add_executable(hw-05-01 hw-05-01.cpp)
add_executable(hw-05-02 hw-05-02.cpp)
add_executable(hw-05-03 hw-05-03.cpp)